kubernetes/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: test.vicarius.xyz
spec:
  rules:
  - host: test.vicarius.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
          name: flask-app
          port:
            number: 80
